Fix title alignment for mobiles

--- a/_sass/theme/_layout.scss
+++ b/_sass/theme/_layout.scss
@@ -37,16 +37,17 @@
   padding-top: 40px;
   padding-bottom: 40px;
 
-  .title {
-    align-self: center;
-    margin: 10px;
-  }
-
   .image {
     height: 200px;
     width: 200px;
     border-radius: 50%;
     margin: 10px;
+  }
+
+  .title {
+    align-self: center;
+    margin: 10px;
+    text-align: center;
   }
 }
 
